主界面设计1

--- a/html/主界面设计.html
+++ b/html/主界面设计.html
@@ -3,46 +3,29 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<style type="text/css">
-			#div1{
-				width: 1024px;
-				height: 131px;
-				background: #ffffff;
-				border: 1px solid #777777;
-			}
-			#text1{
-				width: 324px;
-				height: 29px;
-				left: 37px;
-				top: 29px;
-				font-size: 14px;
-				font-family: Microsoft YaHei, Microsoft YaHei-Normal;
-				font-weight: Normal;
-				text-align: left;
-				color: #777777;
-				line-height: 6px;
-			}
-			#input1{
-				width: 200px;
-				height: 30px;
-				left: 200px;
-				top: 30px;
-				background: #ffffff;
-				border: 1px solid #777777;
-				border-radius: 0px;
-				font-size: 14px;
-				font-family: Microsoft YaHei, Microsoft YaHei-Normal;
-				font-weight: Normal;
-				text-align: left;
-				color: #777777;
-				line-height: 20px;
-			}
-		</style>
+		<link rel="stylesheet" href="./主界面.css">
 	</head>
 	<body style="width: 1048px; height:768px ;">
 		<div id="div1">
-			<b id="text1">刘总的日程安排项目</b>
+			<span class="text1">刘总的日程安排项目</span>
 			<input type="text" name="input1" id="input1" value="请输入项目名称" />
+			<input type="date" name="input2" id="input2" value="" />
+			<button type="button" id="btn1">搜 索</button>
 		</div>
+		<div id="div2">
+			<div id="div21">
+				<img src="img/addPartner.png" id="img1">
+				<span class="text2">添加团队成员</span>
+			</div>
+			<div id="div3">
+				<span class="text3">项目列表</span>
+				<select NAME="TEMP"  id="select1">
+					<option value="AAAAAA">AAAAAA</option>
+				</select>
+				<p id="p1"></p>
+				</table>
+			</div>
+		</div>
+		
 	</body>
 </html>
